syntax = "proto3";

package proto;


option go_package = "./proto;proto";

message UserRequest {
  string uid = 1;
  repeated string fields = 2; // example: ["name", "email"]
}

// Ye pura struct DB service se aayega
message User {
  string uid = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string phone = 5;
  string city = 6;
}

// Response me filtered user bhejna hai
message UserResponse {
  User user = 1;
}

// Service jo server implement karega
service UserService {
  rpc GetUserData(UserRequest) returns (UserResponse);
}
